[project]
name = "ai-safety-knowledge-base"
version = "0.1.0"
description = "Structured AI safety knowledge base with ingestion and retrieval APIs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "AI Safety Collective"}
]
dependencies = [
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "pgvector>=0.2.5",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pytest-asyncio>=0.23.0",
  "PyPDF2>=3.0.0"
]

[project.optional-dependencies]
ingestion = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "sentence-transformers>=3.0.0"
]

[project.urls]
homepage = "https://github.com/example/ai-safety-knowledge-base"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

